<resources>
    <string name="app_name">Mis finanzas</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password"><u>¿Has olvidado tu contraseña?</u></string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrate">Regístrate</string>
    <string name="errorpass">Contraseña incorrecta</string>
    <string name="digits6">La contraseña debe tener al menos 6 caracteres</string>
    <string name="digits8">El usuario debe tener al menos 8 caracteres</string>
    <string name="email_invalido">El correo ingresado no es válido</string>
    <string name="crear_usuario">Crear usuario</string>
    <string name="username">Nombre de usuario</string>
    <string name="repeat_password">Repetir la contraseña</string>
    <string name="no_coincidencia">Las contraseñas no coinciden</string>
    <string name="mostrar">Mostrar contraseña</string>
    <string name="logout">Cerrar sesión</string>
    <string name="trans">Trans.</string>
    <string name="transacciones">Transacciones</string>
    <string name="estad">Estad.</string>
    <string name="estadisticas">Estadísticas</string>
    <string name="bienes">Bienes</string>
    <string name="ajustes">Ajustes</string>
    <string name="diario">Diario</string>
    <string name="semanal">Semanal</string>
    <string name="mensual">Mensual</string>
    <string name="ingresos">ingresos</string>
    <string name="gastos">Gastos</string>
    <string name="darkTheme">Modo oscuro</string>
    <string name="campos_vacios">Verifique que todos los campos estén diligenciados</string>
    <string name="email_incorrecto">El correo no está escrito correctamente</string>
    <string name="pass_invalida">La contraseña debe contener 6 caracteres mínimo</string>
    <string name="usuario_no_existe">El usuario no existe. Por favor regístrate</string>
    <string name="pass_incorrecta">Contraseña incorrecta. Intente de nuevo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registertype">Hacer un registro</string>
    <string name="date">Fecha de Registro</string>
    <string name="category">Categoria</string>
    <string name="descripcion">Descripción:</string>
    <string name="monto">Monto:</string>
    <string name="account">Metodo de pago</string>
    <string name="account2">Tipo de Cuenta</string>
    <string name="registerdialog">Registrar</string>
    <string name="valueIngresos">Valor del ingreso</string>
    <string name="valueGastos">Valor del gasto</string>
    <string name="digitvalue">Digite el Monto</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="otro">Otro</string>
    <string name="selectday">Seleccionar día</string>
    <string name="positive">+ $ %s</string>
    <string name="negative">- $ %s</string>
    <string name="neutro">$ %s</string>
    <string name="transaccionOK">Transacción realizada el día %s</string>
    <string name="tipo_registro">Tipo de registro</string>
    <string name="dinero_cuenta">Cuentas</string>
    <string name="dinero_efectivo">Efectivo</string>
    <string name="deuda_tarjeta">Tarjetas de crédito</string>
    <string name="balance">Balance</string>
    <string name="a_deber">A deber</string>
    <string name="capital">Capital</string>
    <string name="ingresos_mensual">Ingresos de este mes</string>
    <string name="gastos_mensual">Gastos de este mes</string>
    <string name="recovery_password">Recuperar contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="information">Ingresando su correo electrónico le enviaremos un email de recuperación donde podrá cambiar su contraseña.</string>
    <string name="delete">Borrar Registro</string>
    <string name="edit">Actualizar</string>
    <string name="register">Registro</string>
    <string name="movimiento">Registrar Movimiento</string>
    <string name="correo_no_verificado">Correo electrónico no verificado. Revise su bandeja de entrada</string>
    <string name="usuario_creado_verificar">Usuario creado - Se envió Correo de Verificación</string>
    <string name="correo_recuperacion">Correo de recuperación enviado con éxito</string>
    <string name="ingrese_correo">Ingrese un correo electrónico</string>
    <string name="verifique_correo_de_recuperacion">No fue posible enviar el correo de recuperación. El correo no está asociado a ninguna cuenta.</string>
    <string name="foto_actualizada">Fotografía actualizada con éxito</string>
    <string name="fecha">Fecha:</string>
    <string name="tipo_de_registro">Tipo de registro:</string>
    <string name="tipo_pago">Tipo de pago:</string>
    <string name="ingrese_el_monto">Ingrese el monto</string>
    <string name="registereditar">Editar Registro</string>
    <string name="editar_registro">Editar/Borrar Registro</string>
    <string name="confirmacion">Confirmación</string>
    <string name="confirmar_borrar">¿Está seguro que desea BORRAR este registro?</string>
    <string name="confirmar_editar">¿Está seguro que desea EDITAR este registro?</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="registro_actualizado">Registro Actualizado con Exito</string>
    <string name="ingresar_nuevo_monto">Ingrese el nuevo monto del registro</string>
    <string name="registro_eliminado">Registro eliminado con éxito</string>
    <string name="registro_invalido">Registro Inválido</string>
    <string name="registro_exitoso">Registro Exitoso</string>
    <string name="moth_and_year">Mes Y Año De Interés:</string>

    <string-array name="tipoList">
        <item>Ingreso</item>
        <item>Gasto</item>
    </string-array>
    <string-array name="categorylist">
        <item>Alimentación</item>
        <item>Vivienda</item>
        <item>Transporte</item>
        <item>Salud y autocuidado</item>
        <item>Entretenimiento y diversión</item>
        <item>Vestuario</item>
        <item>Educación</item>
        <item>Comunicaciones</item>
        <item>Otro gasto</item>
    </string-array>
    <string-array name="accountlist">
        <item>Efectivo</item>
        <item>Cuenta Bancaria</item>
        <item>Tarjeta de Crédito</item>
    </string-array>
    <string-array name="ingresoslist">
        <item>Salario</item>
        <item>Subsidio</item>
        <item>Dinero mensual</item>
        <item>Arriendo de bienes raíces</item>
        <item>Comisiones</item>
        <item>Bonos</item>
        <item>Otro ingreso</item>
    </string-array>
    <string-array name="months">
        <item>Seleccione el mes</item>
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
    <string-array name="years">
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
        <item>2035</item>
        <item>2036</item>
        <item>2037</item>
        <item>2038</item>
        <item>2039</item>
        <item>2040</item>
        <item>2040</item>
        <item>2041</item>
        <item>2042</item>
        <item>2043</item>
        <item>2044</item>
        <item>2045</item>
        <item>2046</item>
        <item>2047</item>
        <item>2048</item>
        <item>2049</item>
        <item>2040</item>
        <item>2050</item>
        <item>2051</item>
        <item>2052</item>
        <item>2053</item>
        <item>2054</item>
        <item>2055</item>
        <item>2056</item>
        <item>2057</item>
        <item>2058</item>
        <item>2059</item>
        <item>2060</item>
    </string-array>
</resources>
