<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_registro">

    <fragment
        android:id="@+id/navigation_registro"
        android:label="@string/transacciones"
        android:name="com.example.myfinances.fragments.RegistroFragment"
        tools:layout="@layout/fragment_registro" >
        <action
            android:id="@+id/action_navigation_registro_to_navigation_edit_registro"
            app:destination="@id/navigation_edit_registro" />
        <action
            android:id="@+id/action_navigation_registro_to_dialogRegistroFragment"
            app:destination="@id/dialogRegistroFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_estadisticas"
        android:label="@string/estadisticas"
        android:name="com.example.myfinances.fragments.EstadisticasFragment"
        tools:layout="@layout/fragment_estadisticas" />
    <fragment
        android:id="@+id/navigation_bienes"
        android:label="@string/bienes"
        android:name="com.example.myfinances.fragments.BienesFragment"
        tools:layout="@layout/fragment_bienes" />
    <fragment
        android:id="@+id/navigation_ajustes"
        android:label="@string/ajustes"
        android:name="com.example.myfinances.fragments.AjustesFragment"
        tools:layout="@layout/fragment_ajustes" />
    <fragment
        android:id="@+id/navigation_edit_registro"
        android:name="com.example.myfinances.fragments.sub_fragments.DialogEditFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_dialog_edit">
        <argument
            android:name="register"
            app:argType="com.example.myfinances.data.server.RegistroServer"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/dialogRegistroFragment"
        android:name="com.example.myfinances.fragments.sub_fragments.DialogRegistroFragment"
        android:label="@string/movimiento"
        tools:layout="@layout/fragment_dialog_registro" />

</navigation>
