<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_registro"
        android:enabled="true"
        android:icon="@drawable/ic_registro"
        android:title="@string/registro"/>
    <item
        android:id="@+id/navigation_estadisticas"
        android:enabled="true"
        android:icon="@drawable/ic_estadisticas"
        android:title="@string/estadisticas"/>
    <item
        android:id="@+id/navigation_bienes"
        android:enabled="true"
        android:icon="@drawable/ic_bienes"
        android:title="@string/bienes"/>
    <item
        android:id="@+id/navigation_ajustes"
        android:enabled="true"
        android:icon="@drawable/ic_ajustes"
        android:title="@string/ajustes"/>
</menu>
