<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:visibility="visible"
    tools:context=".fragments.sub_fragments.DialogRegistroFragment">

    <TextView
        android:id="@+id/titledialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/registertype"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/buttoningreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingresos"
            app:cornerRadius="32dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttongasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gastos"
            app:cornerRadius="32dp" />

    </LinearLayout>

    <EditText
        android:id="@+id/inputdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:hint="@string/date"
        android:importantForAutofill="no"
        android:inputType="date"
        android:minHeight="48dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/categoryaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/account"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/metodoPagoSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/accountlist"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/categorytext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/category"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/categoryspiner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/categorylist"
        android:minHeight="48dp"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/accountsspinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/ingresoslist"
        android:minHeight="48dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/valuetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/value"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/inputvalue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/digitvalue"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/registerbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/registerdialog"
        app:cornerRadius="32dp" />

</LinearLayout>